--- a/ColtSteele/Section-6-CSS/67a-CodingExercise8/style.css
+++ b/ColtSteele/Section-6-CSS/67a-CodingExercise8/style.css
@@ -3,6 +3,8 @@ h1 {
   font-weight: bold;
   text-decoration: #f78120 underline wavy;
   letter-spacing: 10px;
+  font-size: 80px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 a {
